<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:text="@string/cancel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:text="@string/filter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:text="@string/ok"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/line"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/lvSubDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>