<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/custom_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tvMainDrawerCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/filter"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvMainDrawerOk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/ok"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/line" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/svMainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgourd_layout_dark_color"
        android:clickable="true"
        android:focusable="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/white">

                <View
                    android:id="@+id/priceRangeTopLinea"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/line" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/view"
                    android:layout_below="@+id/priceRangeTopLinea"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:text="价格区间:"
                        android:textColor="@color/text_dark_color" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilMinLayout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3">

                            <EditText
                                android:id="@+id/etMinPrice"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:inputType="numberDecimal"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="15dp"
                                android:textSize="12sp" />
                        </android.support.design.widget.TextInputLayout>


                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_weight="1"
                            android:background="@color/bottom_bg" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilMaxLayout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3">

                            <EditText
                                android:id="@+id/etMaxPrice"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:inputType="numberDecimal"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="15dp"
                                android:textSize="12sp" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                </LinearLayout>


            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/white">

                <View
                    android:id="@+id/promotionTopLinea"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/promotionTopLinea"
                    android:orientation="vertical"
                    android:paddingLeft="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="是否免费"
                        android:textColor="@color/text_dark_color" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@drawable/line" />

                    <RadioGroup
                        android:id="@+id/rgFree"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbFreeYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="是" />


                        <RadioButton
                            android:id="@+id/rbFreeNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="否" />

                    </RadioGroup>


                </LinearLayout>

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/white">

                <View
                    android:id="@+id/freeTopLinea"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/freeTopLinea"
                    android:orientation="vertical"
                    android:paddingLeft="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="是否促销"
                        android:textColor="@color/text_dark_color" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@drawable/line" />

                    <RadioGroup
                        android:id="@+id/rgSale"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbSaleYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="是" />


                        <RadioButton
                            android:id="@+id/rbSaleNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"

                            android:text="否" />

                    </RadioGroup>


                </LinearLayout>

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:text="所有分类"
                    android:textColor="@color/text_dark_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@drawable/line" />


                <ListView
                    android:id="@+id/lvAllType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:scrollbars="none" />


            </LinearLayout>


            <Button
                android:id="@+id/btnClearAllSelect"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="取消选项" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>